# tw-quant-system

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  demo_data.py  streamlit_app.py
configs/: settings.example.toml  tw_top50_liquidity.example.toml
data/: README.md
docs/: architecture.md  project_overview.md
research/experiments/: README.md
research/notebooks/: README.md
src/tw_quant/: __init__.py  __main__.py  cli.py  config.py
src/tw_quant/backtest/: __init__.py  cross_sectional.py  metrics.py  run.py  walkforward.py
src/tw_quant/core/: __init__.py  models.py
src/tw_quant/data/: __init__.py  io.py  loader.py  normalize.py  providers.py  store.py
src/tw_quant/diagnostics/: __init__.py  analyze.py
src/tw_quant/execution/: __init__.py  paper.py
src/tw_quant/pipelines/: __init__.py  backtest.py  decision.py  diagnostics.py  ingest.py  paper.py  signals.py  walkforward.py
src/tw_quant/portfolio/: __init__.py  construct.py
src/tw_quant/reporting/: __init__.py  charts.py  report.py
src/tw_quant/signals/: __init__.py  generate.py  loader.py
src/tw_quant/universe/: __init__.py  liquidity.py
tests/integration/: test_cli.py
tests/unit/: test_backtest_engine.py  test_backtest_metrics.py  test_config.py  test_cross_sectional_backtest.py  test_cross_sectional_signals.py  test_demo_data.py  test_diagnostics.py  test_ingest_pipeline.py  test_loader.py  test_models.py  test_normalize.py  test_paper_execution.py  test_portfolio_construct.py  test_reporting.py  test_signal_generation.py  test_twse_provider.py  test_universe_liquidity.py  test_walkforward.py
