[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "tw-quant"
version = "0.1.0"
description = "Portfolio-grade quantitative trading scaffold for Taiwan equities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[project.scripts]
twq = "tw_quant.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/tw_quant"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["tw_quant"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
