[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[project]
name = "tw-quant"
version = "0.1.0"
description = "Portfolio-grade quantitative trading scaffold for Taiwan equities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "streamlit>=1.39.0",
  "typer>=0.12.0",
]

[dependency-groups]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.build-backend]
module-name = "tw_quant"
module-root = "src"
source-include = ["bin/**"]
data = { scripts = "bin" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["tw_quant"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
